{
  "version": 4,
  "terraform_version": "0.12.12",
  "serial": 151,
  "lineage": "bdbbbf47-cdc1-8a23-7fed-1cf8d0dead2c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Artifactory",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-040a1551f9c9d11ad",
            "arn": "arn:aws:ec2:eu-central-1:649130012917:instance/i-031501ddd625af948",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-031501ddd625af948",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-0f9f67c9e74b8f3a9",
            "private_dns": "ip-10-0-1-73.eu-central-1.compute.internal",
            "private_ip": "10.0.1.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06b4377cb788c39b2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-07267aafc848e6bc5",
              "sg-0c37b5201681c600b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d0c07014d240e8eb",
            "tags": {
              "Name": "Artifactory"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07267aafc848e6bc5",
              "sg-0c37b5201681c600b"
            ]
          },
          "depends_on": [
            "aws_security_group.ssh",
            "aws_security_group.subnetsecurity",
            "aws_subnet.PublicSubnet",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "CI",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-040a1551f9c9d11ad",
            "arn": "arn:aws:ec2:eu-central-1:649130012917:instance/i-0abcb7d0f402897c9",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0abcb7d0f402897c9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-068a283d117bd2825",
            "private_dns": "ip-10-0-1-141.eu-central-1.compute.internal",
            "private_ip": "10.0.1.141",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-067036f9c847edacc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-07267aafc848e6bc5",
              "sg-0c37b5201681c600b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d0c07014d240e8eb",
            "tags": {
              "Name": "CI"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07267aafc848e6bc5",
              "sg-0c37b5201681c600b"
            ]
          },
          "depends_on": [
            "aws_security_group.ssh",
            "aws_security_group.subnetsecurity",
            "aws_subnet.PublicSubnet",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Devtools",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-040a1551f9c9d11ad",
            "arn": "arn:aws:ec2:eu-central-1:649130012917:instance/i-0e59276d99aa72274",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0e59276d99aa72274",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-07876fba480126a69",
            "private_dns": "ip-10-0-1-231.eu-central-1.compute.internal",
            "private_ip": "10.0.1.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0393d323e9da9b818",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-07267aafc848e6bc5",
              "sg-0c37b5201681c600b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d0c07014d240e8eb",
            "tags": {
              "Name": "Devtools"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07267aafc848e6bc5",
              "sg-0c37b5201681c600b"
            ]
          },
          "depends_on": [
            "aws_security_group.ssh",
            "aws_security_group.subnetsecurity",
            "aws_subnet.PublicSubnet",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Docker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-040a1551f9c9d11ad",
            "arn": "arn:aws:ec2:eu-central-1:649130012917:instance/i-0d1ff5abb8b98e5c7",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0d1ff5abb8b98e5c7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-016cee6d50b8d0879",
            "private_dns": "ip-10-0-1-59.eu-central-1.compute.internal",
            "private_ip": "10.0.1.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08a0c361467e1679a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-07267aafc848e6bc5",
              "sg-0c37b5201681c600b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d0c07014d240e8eb",
            "tags": {
              "Name": "Docker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07267aafc848e6bc5",
              "sg-0c37b5201681c600b"
            ]
          },
          "depends_on": [
            "aws_security_group.ssh",
            "aws_security_group.subnetsecurity",
            "aws_subnet.PublicSubnet",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0d78671e5c0cf1428",
            "owner_id": "649130012917",
            "tags": {
              "Name": "gw"
            },
            "vpc_id": "vpc-0cc5b8ae5be4cb6ef"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0761ec8384a9ca5f4",
            "owner_id": "649130012917",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d78671e5c0cf1428",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gw"
            },
            "vpc_id": "vpc-0cc5b8ae5be4cb6ef"
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "arta",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc4683f05bbd4eb5",
            "route_table_id": "rtb-0761ec8384a9ca5f4",
            "subnet_id": "subnet-0d0c07014d240e8eb"
          },
          "depends_on": [
            "aws_route_table.r",
            "aws_subnet.PublicSubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:649130012917:security-group/sg-07267aafc848e6bc5",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07267aafc848e6bc5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh",
            "name_prefix": null,
            "owner_id": "649130012917",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0cc5b8ae5be4cb6ef"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "subnetsecurity",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:649130012917:security-group/sg-0c37b5201681c600b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c37b5201681c600b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "subnetsecurity",
            "name_prefix": null,
            "owner_id": "649130012917",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0cc5b8ae5be4cb6ef"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:649130012917:subnet/subnet-0d0c07014d240e8eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d0c07014d240e8eb",
            "map_public_ip_on_launch": false,
            "owner_id": "649130012917",
            "tags": {
              "Name": "PubSub"
            },
            "vpc_id": "vpc-0cc5b8ae5be4cb6ef"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:649130012917:vpc/vpc-0cc5b8ae5be4cb6ef",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b4e4428cf8ccc07d",
            "default_route_table_id": "rtb-0e55717e4841bad09",
            "default_security_group_id": "sg-0f76a2055d4fed2a5",
            "dhcp_options_id": "dopt-b559a6df",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cc5b8ae5be4cb6ef",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e55717e4841bad09",
            "owner_id": "649130012917",
            "tags": {
              "Name": "vpc"
            }
          }
        }
      ]
    }
  ]
}